# car-bt-hmi

./: .gitignore  BluetoothManager.cpp  BluetoothManager.hpp  CMakeLists.txt  ConfirmMenu.qml  DataProvider.cpp  DataProvider.h  DataProvider.hpp  DeviceList.qml  DeviceMenu.qml  DeviceModel.cpp  DeviceModel.hpp  Gauge.cpp  LoadingScreen.qml  Main.qml  MainMenu.qml  MenuButton.qml  MenuFooter.qml  MenuIcon.qml  MenuState.qml  ObdMenu.qml  ObdReader.cpp  ObdReader.h  README.md  ScreenOverlay.qml  SettingsManager.cpp  SettingsManager.hpp  SideMenu.qml  StateIndicator.cpp  StateIndicator.hpp  Vignette.qml  bluetoothmanager.cpp  bluetoothmanager.hpp  deviceinfo.cpp  deviceinfo.hpp  devicemodel.cpp  devicemodel.hpp  gauge.cpp  gauge.h  main.cpp  (+4 more)
android/: AndroidManifest.xml
android/res/values/: strings.xml
include/: BluetoothManager.hpp  ConnectionState.hpp  DataProvider.hpp  Gauge.hpp  ObdPids.hpp  ObdService.hpp  SettingsManager.hpp  StateIndicator.hpp
qml/: Clock.qml  ConfirmMenu.qml  DeviceList.qml  DeviceMenu.qml  HelpMenu.qml  InfoMenu.qml  LoadingScreen.qml  Main.qml  MainMenu.qml  MenuEntry.qml  MenuFooter.qml  MenuHeader.qml  MenuIcon.qml  MenuItem.qml  MenuNumberInput.qml  MenuState.qml  MenuTextBlock.qml  ObdMenu.qml  ScreenOverlay.qml  ScreenTransition.qml  SettingsMenu.qml  SideMenu.qml  Vignette.qml
src/: BluetoothManager.cpp  DataProvider.cpp  DeviceModel.cpp  Gauge.cpp  ObdService.cpp  SettingsManager.cpp  StateIndicator.cpp  main.cpp
